# ClothWorkFlow

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  start-api.ps1
clothworkflow/: __init__.py  api.py  app.py  detail_view.py  stats.py
clothworkflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
clothworkflow/analysis/: _bm25_corpus.json  _index_version.json  _vector_meta.json
clothworkflow/analysis/qizhou888/: _summary.json  product_001.json  product_002.json  product_003.json  product_004.json  product_005.json  product_007.json  product_008.json  product_010.json  product_011.json  product_013.json  product_014.json  product_015.json  product_017.json  product_018.json  product_019.json  product_020.json  product_021.json  product_022.json  product_023.json  product_024.json  product_026.json  product_028.json  product_029.json  product_030.json  product_031.json  product_033.json  product_035.json  product_036.json  product_038.json  product_039.json  product_040.json  product_041.json  product_043.json  product_045.json  product_046.json  (+5 more)
clothworkflow/cli/: __init__.py  analyze.py  pipeline.py  recommend.py  scrape.py
clothworkflow/core/: __init__.py  analyzer.py  config.py  indexer.py  llm_bedrock.py  model_manager.py  retriever.py  search_intent.py  text_builder.py
clothworkflow/data/: taget_url.txt
clothworkflow/static/: theme.css
clothworkflow/testbed/: stats_preview.html
clothworkflow/web/: index.html  package-lock.json  package.json  vite.config.ts
docs/: technical-guide.md
scripts/: download_models_hf_mirror.ps1
(+446 files in other folders)
